apps/base/middleware/kibana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    app.kubernetes.io/name: kibana
    app.kubernetes.io/component: logging
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5601
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: kibana
